Fixed ranking & game 2-col layout in views/ranking/home & stretched footer in views/layout/master

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -64,17 +64,12 @@ body > #content-container
 	clear:both;
 	position:relative;
 	z-index:10;
-	height:15em;
-	margin-top:-15em;
+	border:1px solid #ccc;
 
 	.footer-container
 	{
-		border:1px solid #ccc;
 		border-bottom:0;
-		height:100%;
 		padding:2em;
-		border-radius:20px 20px 0 0; 
-		margin-top:2em;
 	}
 }
 
