--- a/public/css/ranking/ranking.scss
+++ b/public/css/ranking/ranking.scss
@@ -1,26 +1,8 @@
 @import "../master";
 
-#home_content
+#home_content, #game_nav, #ranking_content
 {
-	display:table;
-	width:100%;
-	height:100%;
-}
-
-#game_nav
-{
-	display:table-cell;
-	width:20%;
-	height:100%;
-	overflow:auto;
-	background-color:#16191E;
-	position:fixed;
-}
-
-#ranking_content
-{
-	display:table-cell;
-	width:70%;
+	padding:0;
 }
 
 .game_list_item
